--- a/test/src/test/java/uks/debuggen/medical/marburg/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/marburg/classModel.yaml
@@ -105,8 +105,8 @@ pre.shouldHave(text(\"- hoarseness:\"));
 pre.shouldHave(matchText(\"name:.*hoarseness\"));
 // check data note 12:00:07
 pre = $(\"#data\");
-pre.shouldHave(text(\"- mediumFever:\"));
-pre.shouldHave(matchText(\"name:.*\\"medium fever\\"\"));
+pre.shouldHave(text(\"- mediumFeverd:\"));
+pre.shouldHave(matchText(\"name:.*\\"medium feverd\\"\"));
 // check data note 12:00:08
 pre = $(\"#data\");
 pre.shouldHave(text(\"- chills:\"));
